# stdin-helper

./: .gitignore  Cargo.toml  README.md
src/: aliases.rs  erro.rs  lib.rs  numeric.rs
